load("//tools/lint:go.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["traceroute.go"],
    importpath = "github.com/scionproto/scion/scion/traceroute",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/addr:go_default_library",
        "//pkg/log:go_default_library",
        "//pkg/private/common:go_default_library",
        "//pkg/private/serrors:go_default_library",
        "//pkg/slayers/path/scion:go_default_library",
        "//pkg/snet:go_default_library",
        "//pkg/slayers:go_default_library",
        "//pkg/snet/path:go_default_library",
        "@com_github_google_gopacket//:go_default_library",
        "@com_github_google_gopacket//layers:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["traceroute.go", "traceroute_test.go"],
    tags = ["exclusive"],
    deps = [
        ":go_default_library",
        "//pkg/addr:go_default_library",
        "//pkg/snet/path:go_default_library",
        "//pkg/snet:go_default_library",
        "//pkg/log:go_default_library",
        "//pkg/private/common:go_default_library",
        "//pkg/private/serrors:go_default_library",
        "//pkg/slayers/path/scion:go_default_library",
        "//pkg/slayers:go_default_library",
        "@com_github_google_gopacket//:go_default_library",
        "@com_github_google_gopacket//layers:go_default_library",
    ],
)
